# eg-simple-status-messaging

./: Cargo.toml
src/: lib.rs
