[package]
name = "atom-matrix-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws2812-esp32-rmt-driver = { version = "0.5.0", features=["embedded-graphics-core", "unstable"] }
embedded-graphics = "0.7.1"
embedded-svc = "0.24.0"
embedded-graphics-simulator = "0.4.0"
u8g2-fonts = { git="https://github.com/Finomnis/u8g2-fonts", features=["embedded_graphics_textstyle"] }
